add_subdirectory (array_bench)
add_subdirectory (bots-alignment-single)
add_subdirectory (bots-fib)
add_subdirectory (bots-fft)
add_subdirectory (bots-nqueens)
add_subdirectory (bots-sparselu-single)
add_subdirectory (bots-sort)
add_subdirectory (bots-strassen)
add_subdirectory (bots-uts)
add_subdirectory (clomp_v1.2)
add_subdirectory (CoMD-master-openmp)
add_subdirectory (CoSP2-master-openmp)
add_subdirectory (DC)
add_subdirectory (graph500-2.1.4)
add_subdirectory (IS)
add_subdirectory (scf-openmp)
add_subdirectory (schedbench)
add_subdirectory (syncbench)
add_subdirectory (XSBench)

