add_subdirectory (copyprivate-test)
add_subdirectory (critical-atomic-test)
add_subdirectory (fibtasks-test)
add_subdirectory (lastprivate-test)
add_subdirectory (masterthread-test)
add_subdirectory (matmul-test)
add_subdirectory (ompcodeletclause-test)
add_subdirectory (parallelfor-test)
add_subdirectory (reduce-omp-test)
add_subdirectory (task-depend-test)
add_subdirectory (tasks-test)
add_subdirectory (threadprivate-test)
add_subdirectory (tree-traversal-tasks-test)
